# MA_training

./: GRE.md  MA_VIsion_Advanced .md  MA_VIsion_Advanced.md  RAEDME.md  README.md  ROS2拓展包操作指南.md  Ubuntu 20安装cartographer.md  cartographer 3d.md  cartographer.md  gpt-4-to-find-bugs.md  ros_control.md  ros_cv_brdige.cpp  sorus.txt  yolov5的模型训练.md  一．机械臂控制.md  控制基础.md  机械臂控制基础.md  迈德威视相机驱动.md
MA_ML_train/: CV_DEMO.py  DNN.py  KNN.py  K_means.py  K_means_sophisicated.py  K_means_to_split_image.py  README.md  SLIC.py  iterative_closest_point.py  linear_neural_network.py  recognize_num.ipynb  tensor_intro.ipynb  tensorboard_tutorial.py  test.py
MA_ML_train/.ipynb_checkpoints/: tensor_intro-checkpoint.ipynb
MA_kalman_filter_test/: CMakeLists.txt  README.md  main.cpp
MA_kalman_filter_test/Configs/camera/: MV-SUA133GC-T-Manifold.config  MV-SUA133GC.config  MV-SUA133GC.config.bak  camera.yaml
MA_kalman_filter_test/devices/: CMakeLists.txt
MA_kalman_filter_test/devices/camera/: mv_camera.cpp  mv_camera.hpp
MA_kalman_filter_test/devices/camera/MVSDK/: CameraDefine.h
bt_learn/: CMakeLists.txt  README.md  bt_tree.xml  bt_v3_demo.cc  grasp_ball_robot_demo.cc  grasp_robot_bt_tree.xml
camera_calibration/: CMakeLists.txt  camera_caliberation.cpp
mqtt_learn/: CMakeLists.txt  mqtt_client.cpp  mqtt_subs.cpp
rectangle/: aim_corrector.hpp  top_model_base.cpp
rm_vision-OpenVINO/test/: CMakeLists.txt  main.cpp
rm_vision-OpenVINO/test/.cache/clangd/index/: main.cpp.1D45648DF0763463.idx
ros_practice_for_ma/: README.md  gitssh
ros_practice_for_ma/install/: local_setup.sh  setup.sh
ros_practice_for_ma/install/demo/share/demo/: local_setup.sh  package.sh  package.zsh
ros_practice_for_ma/install/demo/share/demo/cmake/: demoConfig.cmake
ros_practice_for_ma/install/training1_for_ma/lib/training1_for_ma/: talker
ros_practice_for_ma/install/training1_for_ma/share/training1_for_ma/: package.bash  package.ps1  package.sh  package.zsh
ros_practice_for_ma/log/: latest_build
ros_practice_for_ma/mannual_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_practice_for_ma/mannual_node/install/MA_susbriber/lib/MA_susbriber/: MA_subscriber
ros_practice_for_ma/mannual_node/install/MA_susbriber/share/MA_susbriber/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_practice_for_ma/mannual_node/install/demo/share/demo/: package.sh  package.xml
ros_practice_for_ma/mannual_node/install/training1_for_ma/lib/training1_for_ma/: talker
ros_practice_for_ma/mannual_node/install/training1_for_ma/share/training1_for_ma/: local_setup.dsv  package.dsv  package.sh
ros_practice_for_ma/mannual_node/log/: latest_build
ros_practice_for_ma/mannual_node/src/MA_susbriber/: CMakeLists.txt  package.xml
ros_practice_for_ma/mannual_node/src/MA_susbriber/include/MA_susbriber/: MA_subsriber.hpp
ros_practice_for_ma/mannual_node/src/MA_susbriber/src/: MA_train_subsriber.cpp
ros_practice_for_ma/mannual_node/src/demo/: CMakeLists.txt
ros_practice_for_ma/mannual_node/src/training1_for_ma/: CMakeLists.txt
ros_practice_for_ma/mannual_node/src/training1_for_ma/include/training1_for_ma/: transform.hpp
ros_practice_for_ma/mannual_node/src/training1_for_ma/src/: transform.cpp
ros_rv/install/: local_setup.sh  setup.sh
ros_rv/install/demo/share/demo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
ros_rv/install/my_demo/lib/my_demo/: demo
ros_rv/install/my_demo/share/my_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_rv/install/my_demo/share/my_demo/cmake/: my_demoConfig-version.cmake  my_demoConfig.cmake
ros_rv/install/my_demo/share/my_demo/environment/: ament_prefix_path.dsv  path.dsv
ros_rv/install/my_package/lib/my_package/: my_node
ros_rv/install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros_rv/install/my_package/share/my_package/cmake/: my_packageConfig.cmake  (+1 more)
ros_rv/install/my_serial_node/share/my_serial_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_rv/install/rm_serial_driver/share/rm_serial_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_rv/log/: latest_build  latest_test
ros_rv/src/my_demo/: CMakeLists.txt
ros_rv/src/my_demo/include/my_demo/: mydemo.hpp
ros_rv/src/my_demo/src/: demo.cpp
ros_rv/src/my_serial_node/: CMakeLists.txt
ros_rv/src/my_serial_node/include/my_serial_node/: packet.hpp  rm_serial_driver.hpp
ros_rv/src/my_serial_node/src/: crc.cpp  ma_serial.cpp
serial/: crc_check.c  crc_check.h  serial(1).hpp  serial(1).md  serial.cpp  串口通信(1).md
slam_tutorial/: CMakeLists.txt
slam_tutorial/src/: CMakeLists.txt
slam_tutorial/src/basic_math/: CMakeLists.txt  motion.cpp
slam_tutorial/test/: test.cpp
summuer_training_1/: 3D_2_BEV.cpp  CMakeLists.txt  CmakeLists.txt  EKF.cpp  README.md  kalman_filter.cpp  orb_cv.cpp  pnp.cpp  pnp_for_training.cpp  pose_estimation_2d_to_2d.cpp  test.cpp
summuer_training_1/.cache/clangd/index/: EKF.cpp.82E228CD3B7295AC.idx  cv.cpp.CA11057EE7B8A4A4.idx  cv.cpp.D3A5A528ED687A15.idx  cv.hpp.626031B60334081A.idx  cv.hpp.B72A194F964004A6.idx  ekf.hpp.5641AC1A1B607DC5.idx  fmt_lib.cpp.9A9D2C2E901CA7E3.idx  fmt_lib.cpp.FBA8B5FD8DD36BCA.idx  orb_cv.cpp.4C6D5E2EB9E1F8A4.idx  pnp_for_training.cpp.3A117688692972F5.idx  pose_estimation_2d_to_2d.cpp.A9655A29B975F342.idx  test.cpp.5ECBE6286F6EF7DA.idx
summuer_training_1/modules/: CMakeLists.txt
summuer_training_1/modules/ekf/: ekf.hpp
summuer_training_1/modules/fmt_lib/: fmt_lib.hpp
training_1/: CMakeLists.txt  main.cpp
training_1/.cache/clangd/index/: cv.cpp.5C6B6E0169640667.idx  cv.hpp.37B470BA69401E88.idx  fmt_lib.cpp.166AA8D8843E21C1.idx  fmt_lib.hpp.7B29CCDD644BB5F9.idx  main.cpp.68F2E174B1BE3D60.idx
training_1/config/detect/: detect.yaml
training_1/modules/: CMakeLists.txt
training_1/modules/cv/: cv.cpp  cv.hpp
(+7 files in other folders)
